# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "scanner"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[[bin]]
name = "interface"
path = "src/interface/main.rs"

[[bin]]
name = "probe"
path = "src/probe/main.rs"

[[bin]]
name = "port_scanner"
path = "src/port/main.rs"

[[bin]]
name = "ip_checker"
path = "src/ipcheck/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 0

[dependencies]
lazy_static = "1.4.0"
json = "0.12"
icmp-socket = "0.2.0"
socket2 = "0.5.5"
network-interface = "1.1.1"
ipnet = "2.9.0"